--- a/adapter-pattern/pom.xml
+++ b/adapter-pattern/pom.xml
@@ -2,17 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>java-design-patterns</artifactId>
+        <groupId>com.huntdreams</groupId>
+        <version>1.0.0</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.huntdreams</groupId>
-    <artifactId>java-design-patterns</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0.0</version>
-    <modules>
-        <module>proxy-pattern</module>
-        <module>strategy-pattern</module>
-        <module>adapter-pattern</module>
-    </modules>
+    <artifactId>adapter-pattern</artifactId>
 
 
 </project>
