--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>strategy-pattern</module>
         <module>adapter-pattern</module>
         <module>bridge-pattern</module>
+        <module>composite-pattern</module>
     </modules>
 
 
