--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>composite-pattern</module>
         <module>observer-pattern</module>
         <module>singleton-pattern</module>
+        <module>iterator-pattern</module>
     </modules>
 
 
